[package]
name = "utils"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "1.0.0"
log = "0.4.27"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console", "Window", "Document", "HtmlElement"] }

[build-dependencies]
wasm-bindgen-cli = "0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
lto = true